--- a/src/index.scss
+++ b/src/index.scss
@@ -72,75 +72,22 @@
   a:hover,
   a:active,
   a:focus {
-    color: #f8234a;
+    color: #23f8f5;
     outline: none;
     text-decoration: none;
   }
 
-  p {
-    padding: 0;
-    margin: 0 0 30px 0;
-  }
-
-  h1,
-  h2,
-  h3,
-  h4,
-  h5,
-  h6 {
-    font-family: "Raleway", sans-serif;
-    font-weight: 400;
-    margin: 0;
-    padding: 0;
-    color: #c5cef1;
-  }
-
-  .main-page {
-    margin-top: 70px;
-  }
-}
-
-.section-header {
-  margin-bottom: 60px;
-  position: relative;
-  padding-bottom: 20px;
-  .section-header::before {
-    content: "";
-    position: absolute;
-    display: block;
-    width: 60px;
-    height: 5px;
-    background: #f82249;
-    bottom: 0;
-    left: calc(50% - 25px);
-  }
-
-  .section-header h2 {
-    font-size: 36px;
-    text-transform: uppercase;
-    text-align: center;
-    font-weight: 700;
-    margin-bottom: 10px;
-  }
-
-  .section-header p {
-    text-align: center;
-    padding: 0;
-    margin: 0;
-    font-size: 18px;
-    font-weight: 500;
-    color: #9195a2;
-  }
-
-  .section-with-bg {
-    background-color: #f6f7fd;
-  }
-  @media (max-width: 574px) {
-    .section-header h2 {
-      font-size: 24px;
-    }
-    .section-header p {
-      font-size: 16px;
-    }
+  .title-header {
+    border-top: none !important;
+    border-left: none !important;
+    border-right: none !important;
+    border-bottom: 1px solid !important;
+    border-image-slice: 1;
+    border-width: 1px;
+    border-image-source: radial-gradient(
+      circle,
+      rgba(34, 193, 195, 0.7) 3%,
+      rgba(222, 97, 97, 0.698) 100%
+    );
   }
 }
