--- a/src/index.scss
+++ b/src/index.scss
@@ -91,3 +91,60 @@
     );
   }
 }
+.swal2-title {
+  color: rgb(0, 148, 42) !important;
+  font-size: 1.5rem;
+  font-family: "Morabba Bold" !important;
+}
+.swal2-html-container {
+  color: rgb(248, 248, 49) !important;
+  font-size: 1.5rem;
+  font-family: "Dana" !important;
+}
+.swal2-confirm {
+  background: #05cb01 !important;
+  color: #fff !important;
+  font-size: 1.5rem;
+  font-family: "Dana" !important;
+  font-weight: 800;
+  border: none !important;
+  outline: none !important;
+}
+.swal2-cancel {
+  background: rgb(255, 19, 66) !important;
+  color: #fff !important;
+  font-size: 1.5rem;
+  border: none !important;
+  outline: none !important;
+  font-weight: 800;
+  font-family: "Dana" !important;
+}
+.swal2-container {
+  background: #0a07cd37 !important;
+  backdrop-filter: blur(5px) !important;
+}
+.swal2-modal {
+  background: #001424 !important;
+  border: 1px solid rgb(73, 194, 255);
+}
+.swal2-confirm:hover {
+  background: #fff !important;
+  color: #05cb01 !important;
+}
+.swal2-cancel:hover {
+  background: rgb(255, 252, 252) !important;
+  color: #f10000 !important;
+}
+.swal2-icon {
+  background: rgb(3, 78, 29) !important;
+  color: rgb(0, 255, 8) !important;
+}
+.swal2-input-label {
+  color: rgb(255, 242, 0) !important;
+  margin-top: 25px;
+  font-family: "Morabba Bold" !important ;
+}
+.swal2-input {
+  color: rgb(255, 242, 0) !important;
+  font-family: "Dana" !important;
+}
