--- a/src/components/Address/Address.scss
+++ b/src/components/Address/Address.scss
@@ -1,10 +1,3 @@
-#address .address {
-  background: url("../assets/images/subscribe-bg.webp") top  no-repeat;
-  background-size: cover;
-  padding-top: 60px;
-  padding-bottom: 60px;
-  border-radius: 10px;
-  filter: grayscale(70%);
-  background-attachment: fixed;
+.address {
+  background: url("../assets/images/gallery/4.webp") center center no-repeat;
 }
-
