--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -1,26 +1,34 @@
-.navbar > ul > li > a:before {
-  content: "";
+.nav-ul::after {
   position: absolute;
-  width: 0;
+  content: "";
+  width: 500px;
   height: 2px;
-  bottom: -6px;
-  right: 0;
-  border-radius: 20px;
-  background-color: rgb(143, 22, 22);
-  visibility: hidden;
-  transition: all 0.3s ease-in-out 0s;
+  top: 50%;
+  left: -85%;
+  border-radius: 50%;
+
+  @apply bg-rose-500/40;
+}
+.nav-ul::before {
+  position: absolute;
+  content: "";
+  width: 500px;
+  height: 2px;
+  top: 50%;
+  right: -85%;
+  border-radius: 50%;
+
+  @apply bg-rose-500/40;
 }
 
-.navbar a:hover:before,
-.navbar li:hover > a:before,
-.navbar .active:before {
-  visibility: visible;
-  width: 100%;
-}
+.nav-link::after {
+  position: absolute;
+  content: "";
+  width: 10px;
+  height: 5px;
+  top: 45%;
+  right: -20%;
+  border-radius: 50%;
 
-.navbar a:hover,
-.navbar .active,
-.navbar .active:focus,
-.navbar li:hover > a {
-  color: #fff;
+  @apply bg-rose-500;
 }
