--- a/src/components/Pictures/Pictures.scss
+++ b/src/components/Pictures/Pictures.scss
@@ -3,22 +3,77 @@
   border-radius: 20px;
 }
 
-.swiper-pagination{
+.swiper-pagination {
   display: flex;
   gap: 5px;
   justify-content: center;
   margin-top: 40px;
+  cursor: pointer;
 }
 #gallery .swiper-pagination .swiper-pagination-bullet {
-  border-radius: 50%;
-  width: 12px !important;
-  height: 12px !important;
-  background-color: rgba(112, 114, 224, 0.37);
-  opacity: 1;
-  border: 1px solid rgb(208, 235, 6);
+  border-radius: 20%;
+  width: 15px !important;
+  height: 6px !important;
+  background-color: rgb(209, 209, 235);
+  transition: all 0.3s ease-in !important;
 }
 
 #gallery .swiper-pagination .swiper-pagination-bullet-active {
-  background-color: rgb(183, 50, 50);
+  background-color: rgb(4, 103, 241);
+  width: 25px !important;
+  transition: all 0.3s ease-in !important;
 }
 
+.archive {
+  background-image: url("../../../public/assets/images/gallery/9.webp");
+  background-size: cover;
+  background-position: center;
+  background-clip: border-box;
+  background-repeat: no-repeat;
+  object-fit: cover;
+  position: relative;
+  &::before {
+    position: absolute;
+  transition: all .5s ease-in;
+    
+    width: 100%;
+    height: 100%;
+    top: 0;
+    right: 0;
+    content: "";
+    background: rgba(0, 8, 18, 0.867);
+    z-index: 10;
+  }
+  &:hover::before {
+    background: rgba(5, 60, 74, 0.867);
+    transition: all .5s ease-in;
+  
+  }
+}
+.arc {
+  background-image: url("../../../public/assets/images/ph4.jpg");
+  background-size: cover;
+  background-position: bottom;
+  background-clip: border-box;
+  background-repeat: no-repeat;
+  object-fit: contain;
+  position: relative;
+  cursor: pointer;
+  &::before {
+    transition: all .5s ease-in;
+
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    right: 0;
+    content: "";
+    background: rgba(0, 10, 18, 0.815);
+    z-index: 10;
+  }
+  &:hover::before {
+    background: rgba(2, 54, 67, 0.687);
+    transition: all .5s ease-in;
+
+  }
+}
